# Schmitz_Gehirn

./: CMakeLists.txt  README.md  main.cpp
Headers/: backstage.h  engine.h  entity.h  figure.h  game.h  logic.h  meeseeks.h  subordinate.h  supervisor.h
Src/: backstage.cpp  engine.cpp  entity.cpp  figure.cpp  game.cpp  meeseeks.cpp  primitive.cpp  subordinate.cpp  supervisor.cpp
src/: engine.cpp
